--- a/Project/appsettings.json
+++ b/Project/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MySQL_Connection": "Server=localhost;Port=3306;Database=YourDatabaseName;Uid=YourDatabaseUsername;Pwd=YourDatabasePassword;"
+    "MySQL_Connection": "Server=localhost;Port=3306;Database=OnlineCoursesSystem;Uid=root;Pwd=testpassword;"
   },
   "Jwt": {
     "Key": "CcOMfCSH3sTyJ7C3syhDYDI8xdxRYYxo",
