--- a/Project/Project.csproj
+++ b/Project/Project.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.14.0" />
     <PackageReference Include="MySql.EntityFrameworkCore" Version="7.0.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.14.0" />
   </ItemGroup>
 
